--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "path": "^0.12.7",
         "stream": "^0.0.2",
         "v-viewer": "^1.6.4",
+        "vue-currency-input": "^3.0.5",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.3",
         "vuetify": "^2.6.14"
