--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cross-env": "^7.0.3",
         "path": "^0.12.7",
         "stream": "^0.0.2",
+        "v-currency-field": "^3.1.2",
         "v-viewer": "^1.6.4",
         "vue-currency-input": "^3.0.5",
         "vue-moment": "^4.1.0",
