--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vue-currency-input": "^3.0.5",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.3",
+        "vue-shortkey": "^3.1.7",
         "vuetify": "^2.6.14"
     }
 }
