--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.3",
         "vue-shortkey": "^3.1.7",
-        "vuetify": "^2.6.14"
+        "vuetify": "^2.6.14",
+        "vuex": "^3.6.2"
     }
 }
