--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
         "bootstrap-icons": "^1.10.2",
         "bootstrap-vue": "^2.23.1",
         "cross-env": "^7.0.3",
-       "path": "^0.12.7",
+        "idle-vue": "^2.0.5",
+        "path": "^0.12.7",
         "stream": "^0.0.2",
         "v-currency-field": "^3.1.2",
         "v-idle-3": "^0.3.14",
         "v-viewer": "^1.6.4",
         "vue-currency-input": "^3.0.5",
         "vue-moment": "^4.1.0",
+        "vue-recaptcha": "^1.3.0",
         "vue-router": "^3.5.3",
         "vue-shortkey": "^3.1.7",
         "vuetify": "^2.6.14",
